[project]
name = "auto-video"
version = "1.0.0"
description = "卡丁车门店AI短视频自动生成系统（DeepSeek + Qwen VL + Edge TTS + FFmpeg）"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "edge-tts>=6.1",
    "Pillow>=10.0",
    "imageio-ffmpeg>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
